--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+    // "deploy": "git"
   },
   "dependencies": {
     "next": "11.0.1",
