--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-spring": "^9.2.4"
+    "react-spring": "^9.2.4",
+    "use-fit-text": "^2.4.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.19",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "typescript": "^4.3.5"
   }
 }
