--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^11.1.0",
-    "next": "11.0.1",
+    "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-spring": "^9.2.4",
+    "sharp": "^0.29.0",
     "use-fit-text": "^2.4.0"
   },
   "devDependencies": {
