--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^1.27.0",
     "cloudinary-core": "^2.11.4",
     "cookies": "^0.8.0",
+    "googleapis": "^89.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.0.8",
