--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
+    "clean": "rm .env",
     "cypress": "cypress open",
     "lint": "next lint"
   },
@@ -26,7 +27,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-spring": "^9.2.4",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "typescript": "^4.5.3"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.16.0",
